Server returns only the information relevant to the client. Client now needs to show all this information in Vue.

--- a/Assignment1/public/client.html
+++ b/Assignment1/public/client.html
@@ -28,7 +28,7 @@ function getWeather(){
     let prom = fetch("/weather/" + this.city + "," + this.country);
     prom.then(response => response.json())
         .then(response =>
-            this.summary = JSON.parse(response)
+            this.summary = response
         )
 }
 </script>
