--- a/Assignment1/public/client.html
+++ b/Assignment1/public/client.html
@@ -1,13 +1,41 @@
-<!-- Vue client -->>
+<!-- Vue client -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 <body>
 <div id="app">
     <h1>Weather App</h1>
     <p>What location are you planning on visiting?</p>
-    <p>City: <input v-model="city"></p>
-    <p>Country Code: <input v-model="country"></p>
-    <button v-on:click="getWeather">Get Weather</button>
-    <p>{{summary}}</p>
+    <p>City: <input v-model="city"> Country Code: <input v-model="country"> <button v-on:click="getWeather">Get Weather</button> </p>
+    <div v-if="summaryGenerated && summary.code==200">
+        <h2>Summary for {{summary.city}}, {{summary.country}}</h2>
+        <ul>
+            <li v-if="summary.rain==true">It's going to rain at some point, so you need to bring an umbrella!</li>
+            <li v-if="summary.rain==false">It's not going to rain at any point, s you don't need to bring an umbrella.</li>
+            <li v-if="summary.cold==true">The temperature is going to drop under 10°C at some point, so you need to pack for cold weather!</li>
+            <li v-if="summary.warm==true">The temperature is going to be between 10°C and 20°C at some point, so you need to pack for warm weather!</li>
+            <li v-if="summary.hot==true">The temperature is going to be above 20°C at some point, so you need to pack for hot weather!</li>
+        </ul>
+        <table>
+            <thead>
+                <tr style="border: 1px solid black">
+                    <th>Date / Time</th>
+                    <th>Average Temperature (°C)</th>
+                    <th>Average Wind Speed (km/h)</th>
+                    <th>Total Rainfall (mm)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="row in summary.list">
+                    <td>{{row.date_time}}</td>
+                    <td>{{row.temp}}</td>
+                    <td>{{row.wind_speed}}</td>
+                    <td>{{row.rain}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div v-if="summaryGenerated && summary.code==404">
+        <p>Error: City not found. Please try again.</p>
+    </div>
 </div>
 
 <script>
@@ -16,7 +44,8 @@ var app = new Vue({
     data: {
         city: "",
         country: "",
-        summary: {}    
+        summary: {},
+        summaryGenerated: false    
     },
     methods: {
         getWeather: getWeather
@@ -28,8 +57,21 @@ function getWeather(){
     let prom = fetch("/weather/" + this.city + "," + this.country);
     prom.then(response => response.json())
         .then(response =>
-            this.summary = response
+            this.summary = response,
+            this.summaryGenerated = true
         )
 }
+
 </script>
+
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+    table {
+        text-align: center;
+        width: 100%;
+    }
+</style>
 </body>
