--- a/Assignment1/public/client.html
+++ b/Assignment1/public/client.html
@@ -1,7 +1,7 @@
 <!-- Vue client -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 <body>
-<div id="app">
+<div id="app" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
     <h1>Weather App</h1>
     <p>What location are you planning on visiting?</p>
     <p>City: <input v-model="city"> Country Code: <input v-model="country"> <button v-on:click="getWeather">Get Weather</button> </p>
@@ -34,6 +34,7 @@
         </table>
     </div>
     <div v-if="summaryGenerated && summary.code==404">
+        <h2>Error 404</h2>
         <p>Error: City not found. Please try again.</p>
     </div>
 </div>
