--- a/Assignment2/public/client.html
+++ b/Assignment2/public/client.html
@@ -17,7 +17,10 @@
     <div id="app" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
         <h1>Movie App</h1>
         <p>What location are you planning on visiting?</p>
-        <p>Movie Name: <input v-model="title"> Year: <input v-model="year"> <button v-on:click="getMovies">Get Movie</button> </p>
+        <button v-on:click="createDatabase">Create Database</button>
+        <p>Movie Name: <input v-model="title"> Year: <input v-model="year"> <button v-on:click="getMovies">Get Movie</button></p>
+        <button v-on:click="deleteDatabase">Delete Database</button>
+
 
         <!-- Elements to show if the server has responded to the client with a success code -->
         <!-- Show bullet points notifying the user of any special packing conditions, and a table containing a summary of each day. -->
@@ -68,10 +71,22 @@
             summaryGenerated: false    
         },
         methods: {
-            getMovies: getMovies
+            createDatabase: createDatabase,
+            getMovies: getMovies,
+            deleteDatabase: deleteDatabase
         }
     })
 
+    function createDatabase(){
+        console.log("createDatabase called")
+        let prom = fetch("/create")
+    }
+
+    function deleteDatabase(){
+        console.log("deleteDatabase called")
+        let prom = fetch("/delete/")
+       // prom.then(console.log(response))
+    }
     // When the button is pressed, request the weather from the server, at the specified city and country
     // Capture the response in the summary field, and capture that there has been a response with summaryGenerated
     function getMovies(){
@@ -83,5 +98,6 @@
                 this.summaryGenerated = true
             )
     }
+ 
     </script>
 </body>
