Reading from database works

--- a/Assignment2/public/client.html
+++ b/Assignment2/public/client.html
@@ -43,6 +43,8 @@
         <div v-if="summaryGenerated && summary.code==404">
             <p>Error 404: No movie found.</p>
         </div>
+        <p>{{summaryGenerated}}</p>
+        <p>{{summary}}<p>
     </div>
 
     <script>
