Happy with the client, want to tidy up database creation in the server before finishing up

--- a/Assignment2/public/client.html
+++ b/Assignment2/public/client.html
@@ -3,48 +3,44 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <!-- Minimal styling. -->
     <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
         table, th, td {
             border: 1px solid black;
             border-collapse: collapse;
         }
         table {
             text-align: center;
-            width: 100%;
+            width: 50%;
         }
     </style>
 </head>
 <body>
-    <div id="app" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+    <div id="app">
         <h1>Movie App</h1>
-        <p>What location are you planning on visiting?</p>
         <button v-on:click="createDatabase">Create Database</button>
-        <p>Movie Name: <input v-model="title"> Year: <input v-model="year"> <button v-on:click="getMovies">Get Movie</button></p>
+        <p>Movie Title: <input v-model="title"> Release Year: <input v-model="year"> <button v-on:click="getMovies">Query Database</button></p>
         <button v-on:click="deleteDatabase">Delete Database</button>
-
-        
-        <div v-if="summaryGenerated && summary.code==200">
+        <br> <br>
+        <div v-if="summaryGenerated">
             <table>
                 <thead>
-                    <tr style="border: 1px solid black">
+                    <tr>
                         <th>Title</th>
                         <th>Release Date</th>
                         <th>Rating</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr v-for="row in summary.list">
+                    <tr v-for="row in summary">
                         <td>{{row.title}}</td>
-                        <td>{{row.info.release_date}}</td>
+                        <td>{{row.info.release_date.substr(0, 10)}}</td>
                         <td>{{row.info.rating}}</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div v-if="summaryGenerated && summary.code==404">
-            <p>Error 404: No movie found.</p>
-        </div>
-        <p>{{summaryGenerated}}</p>
-        <p>{{summary}}<p>
     </div>
 
     <script>
@@ -65,25 +61,22 @@
 
     function createDatabase(){
         console.log("createDatabase called")
-        let prom = fetch("/create")
+        fetch("/create")
     }
 
     function deleteDatabase(){
         console.log("deleteDatabase called")
-        let prom = fetch("/delete/")
-       // prom.then(console.log(response))
+        fetch("/delete/")
     }
-    // When the button is pressed, request the weather from the server, at the specified city and country
-    // Capture the response in the summary field, and capture that there has been a response with summaryGenerated
+
     function getMovies(){
         console.log("getMovies called")
         let prom = fetch("/movies?title=" + this.title + "&year=" + this.year);
         prom.then(response => response.json())
             .then(response =>
-                this.summary = response,
+                this.summary = response.Items,
                 this.summaryGenerated = true
             )
     }
- 
     </script>
 </body>
